# HacomKTKT

./: .env.example  .gitignore  ARCHITECTURE.md  BAO_CAO_KIENTRUC_API.md  BAO_CAO_TOM_TAT.md  CHANGELOG.md  Dockerfile  HUONG_DAN_PRICE_ADVISOR.md  Kien_Truc_Phase1.html  Kien_Truc_PriceAdvisor.html  MODEL_SETUP_OFFLINE.md  README.md  Sequence_PriceAdvisor_API.html  TONG_HOP_LOI_HE_THONG.md  VALIDATION_REPORT.md  api.md  app.py  cli.py  docker-compose.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements-models.txt  requirements-ocr-cpu.txt  requirements-ocr-gpu.txt  requirements.txt  run_all_tests.py  test.py
.claude/: settings.local.json
Template_BCTT_DATN/: cover.tex  main.tex  settings.tex
core/: __init__.py  annotator.py  anomaly.py  comparison.py  config.py  excel_reader.py  matcher.py  models.py  number_parser.py  peer_comparison.py  peer_models.py  peer_reporter.py  pipeline.py  reporter.py  tender_package.py  text_normalizer.py
data/: HSMT_GoiM01.xlsx  NT_MinhPhat_HSDT.xlsx  generate_samples.py
docs/: Kien_Truc_Phase1_Standalone.html
examples/: validation_report.xlsx
ocr/: __init__.py  config.py  engines.py  exporter.py  grid.py  models.py  pdf_io.py  pipeline.py  schema.py  verify.py
price_advisor_standalone/: README.md  analyze_benchmark.py  investigate_egress.py  requirements.txt  sample_prices.csv
scripts/: benchmark_ocr.py  validate_models.py
security/: __init__.py  runtime.py
streamlit_report/: app.py  requirements.txt
tests/: test_excel_compare.py  test_grid.py  test_matcher.py  test_negative_cases.py  (+7 more)
web/: app.js  (+2 more)
(+65 files in other folders)
